--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,3 +40,17 @@ services:
       REACT_APP_KEYCLOAK_URL: http://localhost:8080
       REACT_APP_KEYCLOAK_REALM: reports-realm
       REACT_APP_KEYCLOAK_CLIENT_ID: reports-frontend
+
+  api:
+      build:
+        context: ./api
+        dockerfile: Dockerfile
+      ports:
+        - "8000:8000"
+      environment:
+        KEYCLOAK_URL: http://keycloak:8080
+        KEYCLOAK_REALM: reports-realm
+        KEYCLOAK_CLIENT_ID: reports-api
+        KEYCLOAK_CLIENT_SECRET: oNwoLQdvJAvRcL89SydqCWCe5ry1jMgq
+      depends_on:
+        - keycloak
